# business-card-watchdog

./: .gitignore  AGENTS.md  PRODUCT_SPEC.md  README.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  live_pilot_request.md  plan_slice.md
.github/workflows/: ci.yml
docs/operations/: child-replacement-sample-output.md  (+9 more)
scripts/: check_plan_drift.py
tests/: synthetic_fixtures.py  test_api.py  test_card_sides.py  test_classifier_training.py  test_cli_surfaces.py  test_config.py  test_contact.py  test_contact_store.py  test_crop_quality.py  test_dedupe.py  test_dry_run_pipeline.py  test_enrichment.py  test_known_card_corpus.py  test_mcp.py  test_negative_control_corpus.py  test_negative_corpus_recognition.py  test_orientation_evidence.py  test_positive_control_crop_workbench.py  test_positive_control_labels.py  test_positive_control_ocr_drafts.py  test_positive_control_recognition_training.py  test_positive_control_resume_readiness_gate.py  test_positive_control_scenarios.py  test_positive_control_side_pair_evidence.py  test_positive_control_training_review_loop.py  test_positive_controls.py  test_positive_corpus_evaluation.py  test_positive_corpus_exit_gate.py  test_positive_corpus_recognition.py  test_positive_corpus_review_loop.py  test_positive_corpus_side_pair.py  test_positive_corpus_workbench.py  test_preclassifier.py  test_qr_evidence.py  test_quality.py  test_review.py  test_review_surface.py  test_routing.py  test_service.py  test_sink_apply_adapters.py  (+4 more)
(+163 files in other folders)
